--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsencrypt": "^3.0.0-rc.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "qrcodejs2": "^0.0.2",
     "screenfull": "4.2.0",
     "simplemde": "^1.11.2",
     "tui-editor": "^1.4.10",
